Load settings from json resource