@@ -1,5 +1,6 @@
 package io.webdevice.wiring;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.webdevice.device.DevicePool;
 import io.webdevice.device.WebDevice;
 import io.webdevice.support.AnnotationAttributes;
@@ -13,6 +14,7 @@ import org.springframework.beans.factory.support.BeanDefinitionRegistry;
 import org.springframework.context.annotation.ImportBeanDefinitionRegistrar;
 import org.springframework.core.env.ConfigurableEnvironment;
 import org.springframework.core.env.Environment;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.type.AnnotationMetadata;
 
 import java.net.URL;
@@ -57,35 +59,50 @@ public class WebDeviceRegistrar
         return settings;
     }
 
+    @SuppressWarnings("unchecked")
     private Settings settings(AnnotationMetadata metadata) {
         AnnotationAttributes attributes = attributesOf(EnableWebDevice.class, metadata);
-        SettingsBinder binder = attributes.valueOf("binder", Class.class,
-                (impl) -> {
-                    // Explicitly specified binders take precedence
-                    return (impl != SettingsBinder.class)
-                            ? (SettingsBinder) impl.getDeclaredConstructor().newInstance()
-                            : null;
+        Settings settings = attributes.valueOf("settings", String.class,
+                // First attempt to load settings from a classpath JSON resource
+                value -> {
+                    ObjectMapper mapper = new ObjectMapper();
+                    return mapper.convertValue(
+                            mapper.readTree(new ClassPathResource(value)
+                                    .getInputStream())
+                                    .findValue("webdevice"),
+                            Settings.class);
                 },
+                // Next attempt to load settings using the execution environment
                 () -> {
-                    // Attempt to load the preferred binder using Spring Boot.
-                    if (isPresent("org.springframework.boot.context.properties.bind.Binder", null)) {
-                        // Spring Boot is available, now check if the webdevice-spring-boot module is present
-                        if (isPresent("io.webdevice.wiring.ConfigurationPropertiesBinder", null)) {
-                            return (SettingsBinder) forName("io.webdevice.wiring.ConfigurationPropertiesBinder", null)
-                                    .getDeclaredConstructor()
-                                    .newInstance();
-                        } else {
-                            log.warn("Did you know that there is a Spring Boot module available? See https://webdevice.io for details!");
-                        }
-                    }
-                    // Spring Boot is not available, load from Environment or use default
-                    Class<?> binderClass = environment.getProperty("webdevice.binder", Class.class,
-                            DefaultSettingsBinder.class);
-                    return (SettingsBinder) binderClass
-                            .getDeclaredConstructor()
-                            .newInstance();
+                    SettingsBinder binder = attributes.valueOf("binder", Class.class,
+                            (impl) -> {
+                                // Explicitly specified binders take precedence
+                                return (impl != SettingsBinder.class)
+                                        ? (SettingsBinder) impl.getDeclaredConstructor().newInstance()
+                                        : null;
+                            },
+                            () -> {
+                                // Attempt to load the preferred binder using Spring Boot.
+                                if (isPresent("org.springframework.boot.context.properties.bind.Binder", null)) {
+                                    // Spring Boot is available, now check if the webdevice-spring-boot module is present
+                                    if (isPresent("io.webdevice.wiring.ConfigurationPropertiesBinder", null)) {
+                                        return (SettingsBinder) forName("io.webdevice.wiring.ConfigurationPropertiesBinder", null)
+                                                .getDeclaredConstructor()
+                                                .newInstance();
+                                    } else {
+                                        log.warn("Did you know that there is a Spring Boot module available? See https://webdevice.io for details!");
+                                    }
+                                }
+                                // Spring Boot is not available, load from Environment or use default
+                                Class<?> binderClass = environment.getProperty("webdevice.binder", Class.class,
+                                        DefaultSettingsBinder.class);
+                                return (SettingsBinder) binderClass
+                                        .getDeclaredConstructor()
+                                        .newInstance();
+                            });
+                    return binder.from(environment);
                 });
-        return applySettingsFromAnnotation(binder.from(environment), attributes);
+        return applySettingsFromAnnotation(settings, attributes);
     }
 
     private String maybeRegisterProvider(DeviceDefinition device, BeanDefinitionRegistry registry) {
